# eeg_music

./: .gitignore  .gitmodules  WARP.md  flake.nix  pyproject.toml
nix/: devenv.nix
notes/: bcmi_datasets_explainer.md  bcmi_datasets_markers.md  bcmi_technical_guidelines.md  data_processing.md  dataset_formats.md  datasets.md  eegpt.md  ideas.md  kwestie.md  libs.md  models.md  plan.md  plotting.md  sources.md  thesis_points.md  todo.md  training.md  which_channels.md
src/: bcmi.py  check_dataloaders.ipynb  check_datasets.ipynb  check_eegpt.ipynb  check_music_loudness.ipynb  data.py  dataloader.py  eegpt.py  freeze_utils.py  helper.py  musing.py  nmed_t.py  openmiir.py  plotting.py  training.py
src/eeg_music/: bcmi.py  check_eegpt.ipynb  check_music_loudness.ipynb  data.py  dataloader.py  eegpt.py  freeze_utils.py  musing.py  nmed_t.py  plotting.py  training.py
tests/: test_auroc_callback.py  test_data_loaders.py  test_data_types.py  test_dataset_persistence.py  test_eegmusicdataset_workflows.py  test_freeze_utils.py  test_training.py
