[project]
name = "magisterka"
version = "0.1.0"
description = "Minimal project setup"

requires-python = "==3.12.11"
dependencies = [
  "pip",
  "openneuro-py",
  "scipy",
  "mne",
  "mne-bids[full]",
  "numpy",
  # "h5py",
  "mat73",
  "matplotlib",
  "pandas",
  "librosa",
  # "jupyterlab",
  "ipykernel",
  "ipython",
  "jupyter",
  "notebook",
  "torch",
  "torcheeg",
  "speechbrain",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pyright]
venvPath = ".devenv/state"
venv = "venv"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"